--- a/src/index.html
+++ b/src/index.html
@@ -150,9 +150,7 @@
                 </section>
                 <!--상품리스트 렌더링-->
 
-                <section class="products-list container">
-                    
-                </section>
+                <section class="products-list container"></section>
             </main>
             <!-- 메인 영역 종료 -->
             <!-- 푸터 영역 시작 -->
@@ -190,8 +188,11 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./api/getCategory.js"></script>
     <script src="./api/getProducts.js"></script>
     <script src="./index.js"></script>
+    <script src="./js/isLogin.js"></script>
+    <script src="./api/indexLogout.js"></script>
+    <script src="./api/indexMypage.js"></script>
 </html>
