--- a/src/pages/category.html
+++ b/src/pages/category.html
@@ -398,5 +398,10 @@
             <!--//상품 등록 모달-->
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/isLogin.js"></script>
+    <script src="../api/logout.js"></script>
     <script src="../js/category.js"></script>
+    <script src="../api/mypage.js"></script>
 </html>
