--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -405,4 +405,9 @@
             </footer>
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/isLogin.js"></script>
+    <script src="../api/logout.js"></script>
+    <script src="../api/mypage.js"></script>
 </html>
