--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -105,7 +105,6 @@
                                     >
                                 </div>
                                 <p class="email">eladin@gmail.com</p>
-                                <p class="phone-num">010-0000-0000</p>
                             </div>
                         </section>
                         <div class="main-orderlist">
@@ -203,7 +202,11 @@
                 </div>
             </footer>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="../js/isLogin.js"></script>
+        <script src="../api/logout.js"></script>
         <script src="../api/mypage.js"></script>
-        <script src="../js/mypage.js"></script>
+        <script src="../js/mypageRender.js"></script>
     </body>
 </html>
