--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -223,4 +223,9 @@
             <!-- 푸터 영역 종료 -->
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/isLogin.js"></script>
+    <script src="../api/logout.js"></script>
+    <script src="../api/mypage.js"></script>
 </html>
