--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -190,6 +190,11 @@
                 </div>
             </footer>
         </div>
-        <script src="../js/modify_mypage.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="../js/isLogin.js"></script>
+        <script src="../api/logout.js"></script>
+        <script src="../api/mypage.js"></script>
+        <script src="../api/modify_mypage.js"></script>
     </body>
 </html>
