--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -105,4 +105,9 @@
             </article>
         </div>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/isLogin.js"></script>
+    <script src="../api/logout.js"></script>
+    <script src="../api/mypage.js"></script>
 </html>
