--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style.css" />
+        <link rel="icon" href="./favicon.png" type="image/x-icon" sizes="16x16">
         <title>엘라딘</title>
     </head>
     <body>
