--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
         <link rel="stylesheet" type="text/css" href="../css/default.css" />
         <link rel="stylesheet" type="text/css" href="../css/mypage.css" />
         <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
