--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Eladin</title>
+        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
         <link rel="stylesheet" href="../css/signup.css" />
+        <title>Eladin</title>
     </head>
     <body>
         <div id="wrap">
