--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -44,7 +44,7 @@
                             </form>
                             <div class="header-title-info">
                                 <div class="header-info-item">
-                                    <a href="#" class="header-info-basket">
+                                    <a href="./cart.html" class="header-info-basket">
                                         <img
                                             src="https://svgsilh.com/svg/371980.svg"
                                             alt="장바구니 이미지"
@@ -71,14 +71,6 @@
             <main class="main">
                 <div class="main-container container">
                     <nav class="nav-side-category-bar">
-                        <a
-                            href=""
-                            class="nav-side-category-link category-line-active"
-                            >소설</a
-                        >
-                        <a href="" class="nav-side-category-link">에세이/시</a>
-                        <a href="" class="nav-side-category-link">컴퓨터/IT</a>
-                        <a href="" class="nav-side-category-link">해외도서</a>
                     </nav>
                     <section class="category-book-list-section">
                         <div class="category-book-title-area">
@@ -86,136 +78,6 @@
                         </div>
                         <div class="category-book-line"></div>
                         <ul class="category-book-list">
-                            <li class="category-book-item">
-                                <div class="category-book-item-img-area">
-                                    <a href="" class="category-book-img-link">
-                                        <img
-                                            src="https://www.readersnews.com/news/photo/202106/103485_71171_2613.jpg"
-                                            alt=""
-                                            class="category-book-img"
-                                        />
-                                    </a>
-                                </div>
-                                <div class="category-book-item-introduce">
-                                    <h3 class="category-book-item-title-head">
-                                        <a
-                                            href=""
-                                            class="category-book-item-title"
-                                            >밤은 책이다</a
-                                        >
-                                    </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            이동진
-                                        </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            위즈덤하우스
-                                        </div>
-                                    </div>
-                                    <p class="category-book-item-describe">
-                                        시간과 연민, 사랑에 대하여 이동진과 함께
-                                        읽는 책들
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>13,500원</span>
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="category-book-item">
-                                <div class="category-book-item-img-area">
-                                    <a href="" class="category-book-img-link">
-                                        <img
-                                            src="https://image.yes24.com/goods/102347474/XL"
-                                            alt=""
-                                            class="category-book-img"
-                                        />
-                                    </a>
-                                </div>
-                                <div class="category-book-item-introduce">
-                                    <h3 class="category-book-item-title-head">
-                                        <a
-                                            href=""
-                                            class="category-book-item-title"
-                                            >아무것도 없는책</a
-                                        >
-                                    </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            레미쿠르종
-                                        </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            주니어RHK
-                                        </div>
-                                    </div>
-                                    <p class="category-book-item-describe">
-                                        어느 날, 평소 말수가 적던 할아버지가
-                                        손녀 알리시아에게 책 한 권을 물려준다.
-                                        책을 펼쳐 본 알리시아는 어리둥절하다.
-                                        안에는 온통 흰 종이뿐, 아무것도 없었기
-                                        때문이다. 할아버지는 알리시아에게
-                                        《아무것도 없는 책》이 가진 비밀을
-                                        들려주기 시작한다. 그리고 알리시아의
-                                        인생은 놀라우리만치 새로워지는데……. 과연
-                                        《아무것도 없는 책》이 품고 있는 비밀은
-                                        무엇일까?
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>12,600원</span>
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="category-book-item">
-                                <div class="category-book-item-img-area">
-                                    <a href="" class="category-book-img-link">
-                                        <img
-                                            src="https://image.yes24.com/goods/102347474/XL"
-                                            alt=""
-                                            class="category-book-img"
-                                        />
-                                    </a>
-                                </div>
-                                <div class="category-book-item-introduce">
-                                    <h3 class="category-book-item-title-head">
-                                        <a
-                                            href=""
-                                            class="category-book-item-title"
-                                            >아무것도 없는책</a
-                                        >
-                                    </h3>
-                                    <div class="category-book-item-output">
-                                        <div class="category-book-item-author">
-                                            레미쿠르종
-                                        </div>
-                                        <div
-                                            class="category-book-item-publisher"
-                                        >
-                                            주니어RHK
-                                        </div>
-                                    </div>
-                                    <p class="category-book-item-describe">
-                                        어느 날, 평소 말수가 적던 할아버지가
-                                        손녀 알리시아에게 책 한 권을 물려준다.
-                                        책을 펼쳐 본 알리시아는 어리둥절하다.
-                                        안에는 온통 흰 종이뿐, 아무것도 없었기
-                                        때문이다. 할아버지는 알리시아에게
-                                        《아무것도 없는 책》이 가진 비밀을
-                                        들려주기 시작한다. 그리고 알리시아의
-                                        인생은 놀라우리만치 새로워지는데……. 과연
-                                        《아무것도 없는 책》이 품고 있는 비밀은
-                                        무엇일까?
-                                    </p>
-                                    <p class="category-book-item-price">
-                                        구매
-                                        <span>12,600원</span>
-                                    </p>
-                                </div>
-                            </li>
                         </ul>
                         <div class="category-book-page">
                             <a href="" class="category-book-page-prev">
@@ -325,5 +187,6 @@
             </footer>
             <!-- 푸터 영역 종료 -->
         </div>
+        <script type="module" src="../js/book_category.js"></script>
     </body>
 </html>
