--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -86,70 +86,6 @@
                             </button>
                         </div>
                         <ul class="cart-section-list">
-                            <li class="cart-section-item">
-                                <input
-                                    type="checkbox"
-                                    class="cart-section-item-select"
-                                />
-                                <img
-                                    src="https://www.readersnews.com/news/photo/202106/103485_71171_2613.jpg"
-                                    alt=""
-                                    class="cart-section-item-img"
-                                />
-                                <div class="cart-section-item-introduce">
-                                    <div class="cart-section-item-title">
-                                        제목
-                                    </div>
-                                    <div class="cart-section-item-author">
-                                        저자
-                                    </div>
-                                    <div class="cart-section-item-btns">
-                                        <button
-                                            type="button"
-                                            class="cart-section-item-delete-btn"
-                                        >
-                                            삭제
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="cart-section-item-price-box">
-                                    <span class="cart-section-item-price"
-                                        >2,700원</span
-                                    >
-                                </div>
-                            </li>
-                            <li class="cart-section-item">
-                                <input
-                                    type="checkbox"
-                                    class="cart-section-item-select"
-                                />
-                                <img
-                                    src="https://www.readersnews.com/news/photo/202106/103485_71171_2613.jpg"
-                                    alt=""
-                                    class="cart-section-item-img"
-                                />
-                                <div class="cart-section-item-introduce">
-                                    <div class="cart-section-item-title">
-                                        제목
-                                    </div>
-                                    <div class="cart-section-item-author">
-                                        저자
-                                    </div>
-                                    <div class="cart-section-item-btns">
-                                        <button
-                                            type="button"
-                                            class="cart-section-item-delete-btn"
-                                        >
-                                            삭제
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="cart-section-item-price-box">
-                                    <span class="cart-section-item-price"
-                                        >2,700원</span
-                                    >
-                                </div>
-                            </li>
                         </ul>
                     </section>
                     <div class="cart-section-bottom">
@@ -209,5 +145,6 @@
             </footer>
             <!-- 푸터 영역 종료 -->
         </div>
+        <script type="module" src="../js/cart.js"></script>
     </body>
 </html>
