fix: book_category.html item 주석처리

--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="category-book-line"></div>
                         <ul class="category-book-list">
-                            <li class="category-book-item">
+                            <!-- <li class="category-book-item">
                                 <div class="category-book-item-img-area">
                                     <a href="" class="category-book-img-link">
                                         <img
@@ -254,7 +254,7 @@
                                         바로 구매
                                     </button>
                                 </div>
-                            </li>
+                            </li> -->
                         </ul>
                         <div class="category-book-page">
                             <a href="" class="category-book-page-prev">
