--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -254,7 +254,7 @@
                                         바로 구매
                                     </button>
                                 </div>
-                            </li> -->
+                            </li>
                         </ul>
                         <div class="category-book-page">
                             <a href="" class="category-book-page-prev">
@@ -306,8 +306,10 @@
                                         <div class="page-number-text">5</div>
                                     </a>
                                 </li>
+                                <!-->
                             </ul>
-                            <a href="" class="category-book-page-next">
+                            
+                            <!-- <a href="" class="category-book-page-next">
                                 <div class="category-page-next-text">
                                     <svg
                                         width="14px"
@@ -325,12 +327,13 @@
                                         ></path>
                                     </svg>
                                 </div>
-                            </a>
+                            </a> -->
                         </div>
                     </section>
                 </div>
             </main>
             <!-- 메인 영역 종료 -->
+
             <!-- 푸터 영역 시작 -->
             <footer id="footer" style="border: none">
                 <div class="footer">
@@ -371,4 +374,5 @@
     <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
     <script src="../api/mypage.js"></script>
+    <script src="../js/book_category.js"></script>
 </html>
