feat: category data fetch, render

--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -82,7 +82,7 @@
                     <nav class="nav-side-category-bar">
                     </nav>
                     <section class="category-book-list-section">
-                            <div class="category-book-title">소설</div>
+                            <div class="category-book-title">경영/경제</div>
                         <ul class="category-book-list">
                             <!-- <li class="category-book-item">
                                 <div class="category-book-item-img-area">
