--- a/src/index.html
+++ b/src/index.html
@@ -251,11 +251,10 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./api/getCategory.js"></script>
-    <script src="./api/getProducts.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./api/getProducts.js"></script>
+    <script type="module" src="./index.js"></script>
     <script src="./js/isLogin.js"></script>
     <script src="./api/indexLogout.js"></script>
     <script src="./api/indexMypage.js"></script>
+    <script type="module" src="./js/indexedDB.js"></script>
 </html>
-
-
