--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -371,5 +371,5 @@
     <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
     <script src="../api/mypage.js"></script>
-    <script src="../js/book_category.js"></script>
+    <script type="module"src="../js/book_category.js"></script>
 </html>
