feat: add introduction section in index.html/css, working modify-mypage.html/css/js

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
                         </ul>
                     </div>
                 </section>
-                <section class="select-category-section container">
+                <!-- <section class="select-category-section container">
                     <div class="select-category-btn-content">
                         <div class="select-category-btn-list">
                             <button class="select-category-best-btn">
@@ -151,6 +151,35 @@
                         </div>
                         <div class="select-recommend-category-content">
                             <ul class="recommend-category-content-list"></ul>
+                        </div>
+                    </div>
+                </section> -->
+
+                <!-- 오늘의 책 -->
+                <section class="introduction container">
+                    <h2>엘라딘의 선택</h2>
+                    <div class="introduction-content">
+                        <img
+                            class="cover"
+                            src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/9788954641630.jpg"
+                            alt="introduction-img"
+                        />
+                        <div class="introduction-detail">
+                            <p class="title">[소설] 쇼코의 미소</p>
+                            <p class="author">최은영 ・ 문학동네</p>
+                            <p class="price">12,000원</p>
+                            <p class="intro">
+                                한국문학의 새로운 감수성, 최은영의 시작과 현재를
+                                만나다
+                            </p>
+                            <p class="description">
+                                “시간이 지나고 하나의 관계가 끝날 때마다 나는
+                                누가 떠나는 쪽이고 누가 남겨지는 쪽인지
+                                생각했다. 어떤 경우 나는 떠났고, 어떤 경우
+                                남겨졌지만 정말 소중한 관계가 부서졌을 때는 누가
+                                떠나고 누가 남겨지는 쪽인지 알 수 없었다. _”<br />─「쇼코의
+                                미소」
+                            </p>
                         </div>
                     </div>
                 </section>
