--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -5,7 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
+        <link
+            rel="icon"
+            href="../favicon.png"
+            type="image/x-icon"
+            sizes="16x16"
+        />
         <link rel="stylesheet" type="text/css" href="../css/default.css" />
         <link
             rel="stylesheet"
@@ -96,19 +101,32 @@
                                 <p>이름</p>
                             </div>
                             <div class="name-field field">
-                                <input type="text" class="change-username" name="username">
+                                <input
+                                    type="text"
+                                    class="change-username"
+                                    name="username"
+                                />
                             </div>
                             <div class="id default">
                                 <p>아이디</p>
                             </div>
                             <div class="id-field field">
-                                <input type="text" class="change-userid" name="userid" disabled>
+                                <input
+                                    type="text"
+                                    class="change-userid"
+                                    name="userid"
+                                    disabled
+                                />
                             </div>
                             <div class="email default">
                                 <p>이메일</p>
                             </div>
                             <div class="email-field field">
-                                <input type="email" class="change-email" name="email">
+                                <input
+                                    type="email"
+                                    class="change-email"
+                                    name="email"
+                                />
                             </div>
                             <div class="password default">
                                 <p>비밀번호 변경</p>
