fix: changed introduction corner variable name

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
                 </section> -->
 
                 <!-- 오늘의 책 -->
-                <section class="introduction container">
+                <section class="introduction-corner container">
                     <h2>엘라딘의 선택</h2>
                     <div class="introduction-content">
                         <img
@@ -284,4 +284,3 @@
     <script src="./api/indexMypage.js"></script>
     <script type="module" src="./js/indexedDB.js"></script>
 </html>
- 
