create: add scroll top button in index.html/js, style.css

--- a/src/index.html
+++ b/src/index.html
@@ -238,6 +238,11 @@
                         ></i>
                     </div>
                 </section>
+                <!-- 스크롤 버튼 -->
+                <button class="scroll-to-top">
+                    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <p>TOP</p>
+                </button>
             </main>
             <!-- 메인 영역 종료 -->
             <!-- 푸터 영역 시작 -->
