--- a/src/index.html
+++ b/src/index.html
@@ -109,17 +109,8 @@
                             <div class="swiper-slide trd"></div>
                             <div class="swiper-slide fth"></div>
                         </div>
-                    </div>
-                    <div class="select-category-content">
-                        <div class="select-best-category-content">
-                            <ul class="best-category-content-list"></ul>
-                        </div>
-                        <div class="select-new-category-content">
-                            <ul class="new-category-content-list"></ul>
-                        </div>
-                        <div class="select-recommend-category-content">
-                            <ul class="recommend-category-content-list"></ul>
-                        </div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
                     </div>
                 </section>
 
