--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -135,7 +135,7 @@
                             </div>
                         </div>
 
-                        <form action="http://34.64.105.163/orders" id="form" method="post">
+                        <form action="http://localhost:5500/orders" id="form" method="post">
                             <div class="delievery">
                                 <div class="box-header">
                                     <h3>배송 정보</h3>
