fix: mypage error, swiper scroll error/ feat: admin page link

--- a/src/pages/manage_category.html
+++ b/src/pages/manage_category.html
@@ -42,7 +42,13 @@
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
-                            
+                            <div class="header-nav-list">
+                                <ul>
+                                    <li><a href="./manage_category.html">카테고리</a></li>
+                                    <li><a href="./manage_products.html">상품목록</a></li>
+                                    <li><a href="./manage_orders.html">주문/배송 목록</a></li>
+                                </ul>
+                            </div>   
                             </div>
                         </nav>
                     </div>
