--- a/src/index.html
+++ b/src/index.html
@@ -229,6 +229,7 @@
                     <div class="container">
                         <div class="row">
                             <ul>
+                                <li><a href="./pages/manage_category.html">관리자 페이지</a></li>
                                 <li><a href="#">사이트 도움말</a></li>
                                 <li><a href="#">사이트 이용약관</a></li>
                                 <li><a href="#">사이트 운영원칙</a></li>
@@ -240,6 +241,7 @@
                                 <li><a href="#">책임의 한계와 법적고지</a></li>
                                 <li><a href="#">게시중단요청서비스</a></li>
                                 <li><a href="#">고객센터</a></li>
+                                <li><a href="./pages/magnage_category.html"></a></li>
                             </ul>
                             <address>
                                 Copyright ©
