--- a/src/pages/manage_products.html
+++ b/src/pages/manage_products.html
@@ -15,6 +15,9 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css"
         />
     </head>
+    <style>
+        .fix_modal, .update_modal { display: none; width: 50%; height: 85vh; position: fixed; top: 80px; left: 394px; border: 2px solid lightgray; border-radius: 20px; background-color: #fff; z-index: 2;}
+    </style>
     <body>
         <!-- 상품 등록 모달 -->
         <div class="update_modal">
