fix: remove logo in signup,login page/ feat: admin, user filtered in admin page location

--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
                     <div class="container">
                         <div class="row">
                             <ul>
-                                <li><a href="./pages/manage_category.html">관리자 페이지</a></li>
+                                <li><a href="#" class="adminpage-button">관리자 페이지</a></li>
                                 <li><a href="#">사이트 도움말</a></li>
                                 <li><a href="#">사이트 이용약관</a></li>
                                 <li><a href="#">사이트 운영원칙</a></li>
