--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -12,7 +12,7 @@
         <div id="wrap">
             <header id="header">
                 <div class="container">
-                    <div class="row">
+                    <div class="row mt30">
                         <div class="header">
                             <div class="header-logo">
                                 <!-- <img src="../img/test.jpeg" alt="로고 이미지"> -->
@@ -26,27 +26,6 @@
                                         </li>
                                         <li>
                                             <a href="./login.html">로그인</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="header-user-info">
-                                    <ul>
-                                        <li>
-                                            <a href="./cart.html"
-                                                ><i
-                                                    class="fa fa-shopping-cart"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
-                                        </li>
-                                        <li>
-                                            <a href="./mypage.html"
-                                                ><i
-                                                    class="fa fa-user"
-                                                    blank="_target"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
                                         </li>
                                     </ul>
                                 </div>
